testsuite/tests/properties/invalid_cast/common.lkt
from lexer_example import foo_lexer
from test import ListNode

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- BarNode("example" list_rule)
    list_rule <- ListNode(list+(NumberNode(@Number)))
}

class FooNode implements Node[FooNode] {
}

class BarNode: FooNode {
    @parse_field list_node: ListNode
}

class NumberNode: FooNode implements TokenNode {
}
